--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,153 +3,147 @@ layout: compress
 ---
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/static/images/akat.png" />
-    <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.author }}{% endif %}</title>
-    <meta name="author" content="{{ site.author }}" />
-    <meta name="description" content="{% if page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}" />
-    <meta name="keywords" content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}" />
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
-    <meta content="{{ site.share.fb_appid }}" property="fb:app_id">
-    <meta content="{{ site.title }}" property="og:site_name">
 
-    {% if page.noindex %}
-      <meta name="robots" content="noindex">
-    {% endif %}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/static/images/akat.png" />
+  <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.author }}{% endif %}</title>
+  <meta name="author" content="{{ site.author }}" />
+  <meta name="description" content="{% if page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}" />
+  <meta name="keywords" content="{% if page.title %}{{ page.title }}, {{ site.title }}, {% for categ in page.categories %}{{ categ }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% else %}{{ site.title }}, {% for category in site.categories %}{% capture categories_slug %}{{ category | first }}{% endcapture %}{% for categ in categories_slug %}{{ categ }}{% endfor %}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}" />
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+  <meta content="{{ site.share.fb_appid }}" property="fb:app_id">
+  <meta content="{{ site.title }}" property="og:site_name">
 
-    {% if page.title %}
-      <meta content="{{ page.title }}" property="og:title">
-      <meta content="article" property="og:type">
-    {% else %}
-      <meta content="{{ site.title }}" property="og:title">
-      <meta content="website" property="og:type">
-    {% endif %}
+  {% if page.noindex %}
+  <meta name="robots" content="noindex">
+  {% endif %}
 
-    {% if page.description %}
-      <meta content="{{ page.description }}" property="og:description">
-    {% else %}
-      <meta content="{{ site.description }}" property="og:description">
-    {% endif %}
+  {% if page.title %}
+  <meta content="{{ page.title }}" property="og:title">
+  <meta content="article" property="og:type">
+  {% else %}
+  <meta content="{{ site.title }}" property="og:title">
+  <meta content="website" property="og:type">
+  {% endif %}
 
-    {% if page.url %}
-      <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-    {% endif %}
+  {% if page.description %}
+  <meta content="{{ page.description }}" property="og:description">
+  {% else %}
+  <meta content="{{ site.description }}" property="og:description">
+  {% endif %}
 
-    {% if page.date %}
-      <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-      <meta content="{{ site.url }}/about/" property="article:author">
-    {% endif %}
+  {% if page.url %}
+  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+  {% endif %}
 
-    {% if page.image %}
-      <meta content="{{ site.url }}/static/img/posts/{{ page.image }}" property="og:image">
-    {% else %}
-      <meta content="{{ site.url }}{{ site.avatar_url }}" property="og:image">
-    {% endif %}
+  {% if page.date %}
+  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+  <meta content="{{ site.url }}/about/" property="article:author">
+  {% endif %}
 
-    {% if page.categories %}
-      {% for category in page.categories limit:1 %}
-        <meta content="{{ category }}" property="article:section">
-      {% endfor %}
-    {% endif %}
+  {% if page.image %}
+  <meta content="{{ site.url }}/static/img/posts/{{ page.image }}" property="og:image">
+  {% else %}
+  <meta content="{{ site.url }}{{ site.avatar_url }}" property="og:image">
+  {% endif %}
 
-    {% if page.tags %}
-      {% for tag in page.tags %}
-        <meta content="{{ tag }}" property="article:tag">
-      {% endfor %}
-    {% endif %}
+  {% if page.categories %}
+  {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section">
+  {% endfor %}
+  {% endif %}
 
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@{{ site.share.twitter_username }}">
-    <meta name="twitter:creator" content="@{{ site.share.twitter_username }}">
+  {% if page.tags %}
+  {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag">
+  {% endfor %}
+  {% endif %}
 
-    {% if page.title %}
-      <meta name="twitter:title" content="{{ page.title }}">
-    {% else %}
-      <meta name="twitter:title" content="{{ site.title }}">
-    {% endif %}
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@{{ site.share.twitter_username }}">
+  <meta name="twitter:creator" content="@{{ site.share.twitter_username }}">
 
-    {% if page.url %}
-      <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-    {% endif %}
+  {% if page.title %}
+  <meta name="twitter:title" content="{{ page.title }}">
+  {% else %}
+  <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
 
-    {% if page.description %}
-      <meta name="twitter:description" content="{{ page.description }}">
-    {% else %}
-      <meta name="twitter:description" content="{{ site.description }}">
-    {% endif %}
+  {% if page.url %}
+  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  {% endif %}
 
-    {% if page.header-img %}
-      <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
-    {% endif %}
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/stylesheets/style.css">
+  {% if page.description %}
+  <meta name="twitter:description" content="{{ page.description }}">
+  {% else %}
+  <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
 
-    
-  </head>
-  <body>
-        <div id="header">
-                <div class="header-content">
-                    <div class="header-menu-btn">
-                            <i class="fas fa-bars" id="menu-btn"></i>
-                    </div>
-                    <div class="header-logo">
-                        <img src="logo.png" alt="Logo">
-                    </div>
-                    <div class="action-box">
-                        <div class="action-user">
-                            <div class="action-userfriends-icon">
-                                <i class="fas fa-user-friends"></i>
-                            </div>
-                        </div>
-                        <div class="action-avatar">
-                            <a href="#"><img src="avatar.jpg" alt="Avatar"></a>
-                        </div>
-                        <button id="btn-post">Post Status</button>				
-                    </div>
+  {% if page.header-img %}
+  <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
+  {% endif %}
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/static/stylesheets/style.css">
+
+
+</head>
+
+<body>
+  <div class="wrapper">
+        <header id="header">
+            <div class="header-content">
+                <div class="header-menu-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="logo">
+                    <img src="static/images/logo.png" alt="">
+                </div>
+                <div class="search">
+                    <input type="text" class="search-bar" placeholder="Try to search...">
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="#"><i class="far fa-edit"></i> Blogs</a></li>
+                        <li><a href="#"><i class="fas fa-user-alt"></i> About</a></li>
+                    </ul>
                 </div>
             </div>
-            <div id="dialog-bg">
-                <div id="dialog-post-view">
-                <div class="dialog-post-header">
-                    <h4 class="title">Create Status</h4>
+        </header>
+        <div id="content">
+            <div class="view">
+                <div class="list1">
+                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
+                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
+                        ex nihil! Deleniti voluptas ipsa</p>
                 </div>
-                <div class="dialog-post-body">
-                    <form action="/post" method="post">
-                        <textarea name="contentStatus" id="content-status" placeholder="Ask a question..."></textarea>
-                        <button type="submit" id="btn-status">Share Status</button>
-                    </form>
+                <div class="list1">
+                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
+                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
+                        ex nihil! Deleniti voluptas ipsa</p>
+                </div>
+                <div class="list1">
+                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
+                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
+                        ex nihil! Deleniti voluptas ipsa</p>
+                </div>
+                <div class="list1">
+                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
+                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
+                        ex nihil! Deleniti voluptas ipsa</p>
+                </div>
+                <div class="list1">
+                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
+                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
+                        ex nihil! Deleniti voluptas ipsa</p>
                 </div>
             </div>
-            </div>
-            <div id="popup-dashboard">
-                <div id="menu-dashboard">
-                    <h4>Dashboard</h4>
-                    <div class="user-box">
-                        <p>Hi! <b>Endlov3</b></p>
-                        <ul>
-                            <li><i class="fas fa-plus"></i> <a href="#"> Post Status</a></li>
-                            <li><i class="fas fa-bell"></i> <a href="#"> Notification</a></li>
-                            <li><i class="fas fa-eye"></i> <a href="#"> View Profile</a></li>
-                            <li><i class="fas fa-cog"></i> <a href="#"> Setting</a></li>
-                            <li><i class="fas fa-power-off"></i> <a href="#"> Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-    <div class="home">
-      <div class="main-layout">
-        {{ content }}
-      </div>
-      <!-- end /.col-sm-8 -->
+        </div>
     </div>
-    <!-- end /.container -->
+    <script src="static/javascripts/_0x83c.js"></script>
+</body>
 
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  </body>
 </html>
