--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,6 +1,5 @@
 @import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
-@import url('http://notikki.github.io/static/stylesheets/font.css');
-
+@import url('https://fonts.googleapis.com/css?family=VT323&subset=vietnamese');
 * {
     margin: 0;
     padding: 0;
@@ -8,184 +7,140 @@
 }
 
 body {
-    font-size: 14px;
-    font-family: tyvncms, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-family: 'VT323', monospace;
     margin: 0;
     padding: 0;
+    color: #2c3e50;
+    background-color: #eee;
+    max-width: 1024px;
+    margin: auto;
 }
 
 a {
-	color: #313131;
-	text-decoration: none;
+    color:#035283;
+    text-decoration:none;
 }
 
 a:hover {
-	color: #d25801;
+    color:#417394;
+    text-shadow:0 0 6px #666;
 }
 
 div, ul {
-	display: block;
+    display: block;
 }
 
 li {
-	list-style: none;
+    list-style: none;
 }
 
-/* -------- HEADER -------- */
 #header {
-	width: 100%;
-	position: fixed;
-	background-color: #ffffff;
-	height: 55px;
-	border-bottom: 1px solid #eeeeee;
-	top: 0;
+    height: 50px;
+    line-height: 50px;
+    /* width: 100%; */
+    width: 1024px;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    border-bottom: 1px solid #f2f2f2;
 }
 
-.header-menu-btn {
-	float: left;
-	margin-top: 14px;
-	margin-left: 80px;
+#header .header-menu-btn {
+    float: left;
+    margin-left: 50px;
 }
 
-.header-menu-btn i {
-	font-size: 24px;
-	color: #666;
+#header .logo {
+    float: left;
+    color: #141416;
+    font-size: 20px;
+    height: 50px;
+    line-height: 58px;
+    overflow: hidden;
+    width: 200px;
+    text-align: left;
 }
 
-.header-logo {
-	float: left;
-	margin-left: 50px;
-}
-
-.action-box {
-	float: right;
-}
-
-.action-user {
-	float: left;
-}
-
-i:hover {
-	cursor: pointer;
-}
-
-.action-user .action-bell-icon, .action-user .action-envelope-icon, .action-user .action-userfriends-icon {
-	float: left;
-	margin-top: 14px;
-	margin-right: 40px;
-}
-
-.action-user .action-bell-icon i, .action-user .action-envelope-icon i, .action-user .action-userfriends-icon i {
-	font-size: 24px;
-	color: #666;
-}
-
-.action-avatar {
-	float: right;
-	margin-top: 10px;
-	margin-right: 30px;
-}
-
-button#btn-post {
-	border: 1px solid #1da1f2;
-	color: #ffffff;
-	font-size: 14px;
-	line-height: 20px;
-	background-color: #1da1f2;
-	text-align: center;
-	padding: 10px 14px;
-	border-radius: 50px;
-	margin-right: 30px;
+#header .logo img {
+    margin-left: 18px;
     margin-top: 6px;
 }
 
-.action-avatar img {
-	width: 32px;
-	height: 32px;
-	border-radius: 16px;
+#header .search {
+    float: left;
+    /* max-width: 360px; */
+    margin: 8px 0px 0px 20px;
 }
 
-.action-avatar img:hover {
-	cursor: pointer;
-}
-/* -------- End HEADER -------- */
-
-/* -------- POUPUP MENU -------- */
-#popup-dashboard {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	visibility: hidden;
-	opacity: 0;
-	background: rgba(0, 0, 0, 0.8);
-	z-index: 9999;
-	transition: 0.4s;
+#header .search .search-bar {
+    display: block;
+    width: 400px;
+    height: 34px;
+    padding: 0 34px;
+    background-color: #fff;
+    color: #566574;
+    font-family: 'VT323', monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px;
+    letter-spacing: .17px;
+    border: solid 1px #eceef1;
+    border-radius: 2px;
 }
 
-#popup-dashboard.active {
-	opacity: 1;
-	visibility: visible;
+#header .nav {
+    float: right;
 }
 
-#popup-dashboard #menu-dashboard {
-	width: 320px;
-	height: 100%;
-	background-color: #ffffff;
-	position: fixed;
-	top: 0;
-	right: -320px;
-	z-index: 99999;
-	transition: 0.4s;
+#header .nav ul {
+    padding: 0px 10px;
 }
 
-#popup-dashboard #menu-dashboard.show {
-	right: 0;
-	opacity: 1;
-	visibility: visible;
+#header .nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+    font-size: 15px;
 }
 
-#popup-dashboard #menu-dashboard h4 {
-	text-transform: uppercase;
-	font-size: 1rem;
-	text-align: center;
-	padding: 1rem;
-	border-bottom: 1px solid #ddd;
-	line-height: normal;
-	margin-bottom: 1rem;
+#content {
+    width: 1024px;
+    margin: 60px auto;
 }
 
-.user-box {
 
-}
-
-.user-box p {
-	font-size: 0.9rem;
-    padding: 0 1rem;
-    color: #777;
-    text-align: center;
-}
-
-.user-box .avatar-box img {
-	width: 120px;
-	height: 120px;
-	border-radius: 50%;
-}
-
-.user-box ul {
-
-}
-
-.user-box ul li {
-	padding: 20px 10px;
-	background: none repeat scroll 0 0 #FFF;
+.dmt {
+    background-color: #F2F6F8;
     border-bottom: 1px solid #EBEBEB;
-    font-size: 14px;
+    color: #34617E;
+    margin: 0;
+    padding: 10px 4px;
+}
+
+.list1 {
+    background: none repeat scroll 0 0 #FFF;
+    line-height: 24px;
+    border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid #EBEBEB;
+    padding: 10px 30px;
+}
+
+.list1 h2 {
+    margin-bottom: 10px;
     text-transform: uppercase;
 }
 
-.user-box ul li:first-child {
-	border-top: 1px solid #EBEBEB;
-	margin-top: 10px;
+.nodejs-tag {
+    background-color: #009933;
+    border-radius: 3px;
+    color: #FFF;
+    font-size: 11.844px;
+    font-weight: 700;
+    line-height: 14px;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+    vertical-align: baseline;
+    white-space: nowrap;
+    padding: 1px 4px 2px;
 }
