--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,31 +115,7 @@ layout: compress
         </header>
         <div id="content">
             <div class="view">
-                <div class="list1">
-                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
-                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
-                        ex nihil! Deleniti voluptas ipsa</p>
-                </div>
-                <div class="list1">
-                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
-                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
-                        ex nihil! Deleniti voluptas ipsa</p>
-                </div>
-                <div class="list1">
-                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
-                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
-                        ex nihil! Deleniti voluptas ipsa</p>
-                </div>
-                <div class="list1">
-                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
-                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
-                        ex nihil! Deleniti voluptas ipsa</p>
-                </div>
-                <div class="list1">
-                    <h2><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></h2>
-                    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam doloribus nesciunt, nostrum
-                        ex nihil! Deleniti voluptas ipsa</p>
-                </div>
+                {{ content }}
             </div>
         </div>
     </div>
