--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
                     <i class="fas fa-bars"></i>
                 </div>
                 <div class="logo">
-                    <img src="static/images/logo.png" alt="">
+                    <img src="/static/images/logo.png" alt="">
                 </div>
                 <div class="search">
                     <input type="text" class="search-bar" placeholder="Try to search...">
