--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-size: 16px;
-    font-family: 'Athiti', monospace;
+    font-family: 'Athiti', sans-serif;
     margin: 0;
     padding: 0;
     color: #2c3e50;
