--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,5 +1,5 @@
 @import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
-@import url('https://fonts.googleapis.com/css?family=Andika&subset=vietnamese');
+@import url('https://notikki.github.io/static/stylesheets/tyvncms.css');
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
 
 body {
     font-size: 16px;
-    font-family: 'Andika', sans-serif;
+    font-family: tyvncms, sans-serif;
     margin: 0;
     padding: 0;
     color: #2c3e50;
@@ -81,7 +81,7 @@ li {
     padding: 0 34px;
     background-color: #fff;
     color: #566574;
-    font-family: 'VT323', monospace;
+    font-family: tyvncms, monospace;
     font-weight: 400;
     font-style: normal;
     font-size: 13px;
