--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
         <header id="header">
             <div class="header-content">
                 <div class="header-menu-btn">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars" id="menu-btn"></i>
                 </div>
                 <div class="logo">
                     <img src="https://notikki.github.io/static/images/logo.png" alt="Logo">
@@ -106,6 +106,11 @@
         <div id="content">
             <div class="view">
                 {{ content }}
+            </div>
+        </div>
+        <div id="popup">
+            <div id="menu">
+                <p>Mình sẽ cố gắng cập nhạp những nội dung hay hơn...</p>
             </div>
         </div>
     </div>
