--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div id="popup">
-            <div id="menu">
+            <div id="menu-popup">
                 <p>Mình sẽ cố gắng cập nhạp những nội dung hay hơn...</p>
             </div>
         </div>
