upate index 6 and font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,9 +96,9 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="#"><i class="far fa-edit"></i> Blogs</a></li>
-                        <li><a href="#"><i class="fas fa-user-alt"></i> About</a></li>
+                        <li><a href="https://notikki.github.io"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="https://notikki.github.io"><i class="far fa-edit"></i> Blogs</a></li>
+                        <li><a href="https://notikki.github.io"><i class="fas fa-user-alt"></i> About</a></li>
                     </ul>
                 </div>
             </div>
